@startuml
class Anuncio{
    - id_anuncio:Int
    - libro:Libro
    - tipo_anuncio:String
    - descripcion:String
}
class Prestamo{
    - id_prestamo:Int
    - libro:Libro
    - cc_usuario:Int
    - fecha_prestamo:Date
    - fecha_max_devolucion:Date
    - estado_prestamo:String
    - fecha_entrega:Date
}

class Libro{
    - id_libro:Int
    - nombre:String
    - descripcion:String
    - stock:Int
    - prestamos_activos:Int
    - fecha_publicacion:Date
    - id_autor:Int
    - img_portada:String
    - estado_libro:String
}

class Libros_genero{
    - id:Int
    - libro:Libro
    - genero:Genero
}
class Genero{
    - id_genero
    - nombre_genero
}

class Usuario{
    - cedula:Int
    - nombre:String
    - apellido_1:String
    - apellido_2:String
    - passw:String
    - correo:String
    - prestamos_activos:Int
    - puntaje:Int
    - estado_cuenta:Boolean
    - tipo_usuario:String
    - usuarios : List<Usuario>
}

Anuncio "*"--"1" Libro : contener
Usuario "*"--"*" Libro : solicitar
Libro "1"--"*" Libros_genero : tiene
Genero "1"--"*" Libros_genero : tiene
(Usuario, Libro) .. Prestamo



@enduml